--- a/style.css
+++ b/style.css
@@ -1,5 +1,54 @@
 .container{
 	width: 100%;
 	height: 100vh;
-	background: rgb(0, 0, 0);
+	background: linear-gradient(135deg, #153677, #4e985f);
+	padding: 10px;
+}
+.todo-app{
+	width: 50%;
+	background: #fff;
+	margin: 100px auto 20px;
+	padding: 40px 30px 70px;
+	border-radius: 10px;
+}
+.todo-apph3{
+	color: #002765;
+	display: flex;
+	align-items: center;
+	margin-bottom: 20px;
+	font-family: verdana;
+}
+.searchbar{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	background: #edeef0;
+	border-radius: 30px;
+	padding-left: 10px;
+	margin-bottom: 25px;
+}
+.input{
+	flex: 1;
+	background: transparent;
+	border: none;
+	outline: none;
+	padding: 10px;
+	font-weight: 15px;
+}
+.button{
+	border: none;
+	outline: none;
+	padding: 15px 60px;
+	background: #ff5945;
+	color: white;
+	font-size: 15px;
+	cursor: pointer;
+	border-radius: 40px;
+}
+#ullist{
+	list-style: none;
+	font-size: 18px;
+	padding: 12px 8px 12px 50px;
+	cursor: pointer;
+	user-select: none;
 }
