--- a/style.css
+++ b/style.css
@@ -10,13 +10,14 @@
 	margin: 100px auto 20px;
 	padding: 40px 30px 70px;
 	border-radius: 10px;
+	font-family: 'Open Sans', sans-serif;
 }
 .todo-apph3{
 	color: #002765;
 	display: flex;
 	align-items: center;
 	margin-bottom: 20px;
-	font-family: verdana;
+	font-family: 'Open Sans', sans-serif;
 	align-items: center;
 }
 .searchbar{
@@ -27,6 +28,7 @@
 	border-radius: 30px;
 	padding-left: 10px;
 	margin-bottom: 25px;
+	font-family: 'Open Sans', sans-serif;
 }
 .input{
 	flex: 1;
@@ -34,7 +36,9 @@
 	border: none;
 	outline: none;
 	padding: 10px;
+	font-size: 18px;
 	font-weight: 15px;
+	font-family: 'Open Sans', sans-serif;
 }
 .button{
 	border: none;
@@ -42,14 +46,27 @@
 	padding: 15px 60px;
 	background: #ff5945;
 	color: white;
-	font-size: 15px;
+	font-size: 20px;
 	cursor: pointer;
 	border-radius: 40px;
+	font-family: 'Open Sans', sans-serif;
 }
 #ullist{
+	margin-top: 20px;
 	list-style: none;
+}
+#ullist{
+	position: relative;
+	padding: 10px;
+	padding-right: 20px;
+	text-align: justify;
 	font-size: 18px;
-	padding: 12px 8px 12px 50px;
 	cursor: pointer;
 	user-select: none;
+	font-family: 'Open Sans', sans-serif;
+}
+#ullist i{
+	position: absolute;
+	right: 10px;
+	font-size: 18px;
 }
